--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,4 +9,6 @@ spring:
 mybatis:
   configuration:
     map-underscore-to-camel-case: true
+    # 控制台
+    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
   mapper-locations: classpath:mappers/*.xml
